# uvotredux

./: Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yml  continuous_integration.yml  docker.yml  dockertest.yml  isort.yml  pylint.yml
tests/: test_run.py
tests/test_data/: uvot_summary.csv
uvotredux/: __init__.py  cli.py  paths.py  reduce.py  run.py  utils.py
uvotredux/download/: cli.py  data.py  regions.py  run.py
uvotredux/utils/: __init__.py  name.py  paths.py  skyportal.py  time.py  tns.py
uvotredux/uvot/: __init__.py  filters.py  iterate.py  parse.py  reduce.py
uvotredux/xrt/: iterate.py  reduce.py
